<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jarwis 1.0</string>
    <string name="logo_description">Логотип Jarwis</string>
    <string name="setup_subtitle">Один раз отсканируй QR-код с экрана компьютера. Адрес и код вводить не придётся.</string>
    <string name="searching">На компьютере открой Jarwis Mobile, затем нажми кнопку ниже</string>
    <string name="scan_qr">Сканировать QR</string>
    <string name="manual_fallback">Запасной способ</string>
    <string name="address_hint">Запасной адрес: 192.168.1.20:8876</string>
    <string name="connect">Подключиться вручную</string>
    <string name="scan_again">Найти адрес ПК</string>
    <string name="change_server">Сменить компьютер</string>
    <string name="security_note">Адрес и защищённая сессия хранятся только на этом телефоне.</string>
    <string name="native_send">Отправить сообщение</string>
</resources>
